--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3-scale": "^3.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "single-spa-react": "^2.13.0",
