--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "d3": "^5.15.1",
     "d3-force": "^2.0.1",
     "d3-scale": "^3.2.1",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.3.1",
@@ -22,6 +24,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "single-spa-react": "^2.13.0",
     "typeface-roboto": "0.0.75",
