--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^5.15.1",
     "d3-force": "^2.0.1",
     "d3-scale": "^3.2.1",
+    "formik": "^2.1.4",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
@@ -29,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "single-spa-react": "^2.13.0",
     "typeface-roboto": "0.0.75",
-    "underscore": "^1.10.2"
+    "underscore": "^1.10.2",
+    "yup": "^0.28.3"
   },
   "homepage": "https://padamsandhu.github.io/material-ui-grid-application/",
   "scripts": {
